--- a/app/scripts/templates/designer.html
+++ b/app/scripts/templates/designer.html
@@ -5,14 +5,28 @@
   
 </div>
 <div class="designerText">
-	<div class="row center">
-		<div class="col-lg-6">
-			<h1>Acerca de la Diseñadora</h1>
+	<div class="row">
+		<div class="col-lg-8">
+			<h1>Acerca de la</h1>
 			<h2>ESTEFANIE SEQUEIRA</h2>
 			<br>
 			<h4>Diseñadora de Modas de la Universidad Creativa</h4>
-			<div class="flex">
-				<p>Siqueiros es el complemento perfecto para  la mujer contemporánea. Aquellas que caminan seguras de si mismas con grandes retos y ambiciones. Y que en un ambiente urbano conocen la importancia de una vida saludable. Son mujeres cultas y consientes de la sociedad, que se abren paso al éxito y no creen en los límites. Para ellas, Siqueiros ofrece colecciones contemporáneas e inteligentes que hacen más práctico su diario vivir. Fundiendo la estética y las últimas tendencias de la moda en su día a día.</p>
+			<br>
+			<div class="row">
+				<label>Desfiles</label>
+				<br>
+				<ul>
+					<li>- Participación en la pasarela para la cena benéfica de la Cámara ItaloCostarricense “ Notte di moda, La Dolce Vita”. 2012</li>
+					<li>- Pasarela Emerge Mercedes Benz Fashion Week San Jose 2014 - Pasarela Emerge Mercedes Benz Fashion Week San Jose 2015</li>
+				</ul>
+			</div>
+			<div class="row">	
+				<label>Styling</label>
+				<br>
+				<ul>
+					<li>- Styling para seminario de fotografía de moda “Desde la toma hasta el producto final” de la Universidad Creativa impartivo por el fotógrafo Mato Farroni.</li>
+					<li>- Asistente de Styling y producción para revista Traffic.</li>
+				</ul>
 			</div>
 		</div>
 	</div>
