--- a/app/scripts/templates/home.html
+++ b/app/scripts/templates/home.html
@@ -3,5 +3,5 @@
 	<a href="#home"><h1> S I Q U E I R O S <span> TM <span></h1></a>
 </div>
 <div class="homeMSG">
-  <h1><span>S</span>iqueiros es el complemento perfecto para  la mujer contemporánea.</h1>
+  <h1><span>S</span>iqueiros <%= polyglot.t('homeTitle') %></h1>
 </div>
