--- a/app/scripts/templates/about.html
+++ b/app/scripts/templates/about.html
@@ -2,22 +2,21 @@
 	<a href="#home"><img src="assets/img/home_logo.png"></a>
 	<a href="#home"><h1> S I Q U E I R O S <span> TM <span></h1></a>
 	<img src="assets/img/title_line.png">
-  
 </div>
 <div class="aboutText">
 	<div class="row center">
-		<div class="col-lg-3">
-			<h1>Acerca de Siqueiros</h1>
+		<div class="col-lg-6">
+			<h1><%= polyglot.t('aboutTitle1') %></h1>
 			<div class="flex">
-				<span>S</span><p>iqueiros es el complemento perfecto para  la mujer contemporánea. Aquellas que caminan seguras de si mismas con grandes retos y ambiciones. Y que en un ambiente urbano conocen la importancia de una vida saludable. Son mujeres cultas y consientes de la sociedad, que se abren paso al éxito y no creen en los límites. Para ellas, Siqueiros ofrece colecciones contemporáneas e inteligentes que hacen más práctico su diario vivir. Fundiendo la estética y las últimas tendencias de la moda en su día a día.</p>
+				<%= polyglot.t('aboutText1') %>
 			</div>
 		</div>
 	</div>
 	<div class="row center">
-		<div class="col-lg-3">
-			<h1>Siqueiros y Responsabilidad Social</h1>
+		<div class="col-lg-6">
+			<h1><%= polyglot.t('aboutTitle2') %></h1>
 			<div class="flex">
-				<span>E</span><p>n nuestra empresa somos conscientes de entorno social y ambiental. Por ello, ponemos en práctica la responsabilidad social empresarial. Entre nuestras prácticas, los procesos químicos llevados a cabo por la marca se realizan con elementos naturales que dejan cero residuos en el ambiente. Además, tenemos la meta de ejecutar una producción con cero desperdicio. Para lograrlo, todos los retazos de las colecciones son triturados y mezclados con espuma se utiliza de relleno para almohadas que son donadas al Hospicio de Huérfanos de San José, Costa Rica. ¡Apóyanos  y únete a la causa!</p>
+				<%= polyglot.t('aboutText2') %>
 			</div>
 		</div>
 	</div>
