--- a/app/scripts/templates/contact.html
+++ b/app/scripts/templates/contact.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div id="contactContainer" class="col-lg-7 center">
 		<a href="#home"><img src="assets/img/title_logo.png"></a>
-		<a href="#home"><h1> S I Q U E I R O S <span class="trademark">TM<span></h1></a>
+		<a href="#home"><h1> S I Q U E I R O S </h1></a>
 		<img src="assets/img/title_line.png">
 		<h3><%= polyglot.t('contactTitle') %></h3>
 		<h2><%= polyglot.t('contactSubtitle') %></h2>
