--- a/app/scripts/templates/designer.html
+++ b/app/scripts/templates/designer.html
@@ -1,6 +1,6 @@
 <div class="aboutLogo">
 	<a href="#home"><img src="assets/img/home_logo.png"></a>
-	<a href="#home"><h1> S I Q U E I R O S <span> TM <span></h1></a>
+	<a href="#home"><h1> S I Q U E I R O S </h1></a>
 	<img src="assets/img/title_line.png">
   
 </div>
