--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -1,3 +1,8 @@
+<div class="languagebar">
+    <a href="#en">EN</a><br>
+    <a href="#es">ES</a><br>
+    <a href="#fr">FR</a>
+</div>
 <ul>
     <li>
         <div class="col-lg-2">
