--- a/app/scripts/templates/video.html
+++ b/app/scripts/templates/video.html
@@ -4,5 +4,7 @@
 		  <source src="assets/videos/INSULATION.mp4" type="video/mp4">
 		  Your browser does not support HTML5 video.
 		</video>
+		<br>
+		<label class="skipButton">SKIP</label>
 	</div>
 </div>
