Commit #9 Diseñadora Francés

--- a/app/scripts/templates/designer.html
+++ b/app/scripts/templates/designer.html
@@ -7,25 +7,26 @@
 <div class="designerText">
 	<div class="row">
 		<div class="col-lg-8">
-			<h1>Acerca de la</h1>
-			<h2>ESTEFANIE SEQUEIRA</h2>
+			<h1><%= polyglot.t('designerTitle') %></h1>
+			<h2>Estefani Siqueiros</h2>
 			<br>
-			<h4>Diseñadora de Modas de la Universidad Creativa</h4>
+			<h4><%= polyglot.t('designerSubtitle') %></h4>
 			<br>
 			<div class="row">
-				<label>Desfiles</label>
+				<label><%= polyglot.t('designerItem1') %></label>
 				<br>
 				<ul>
-					<li>- Participación en la pasarela para la cena benéfica de la Cámara ItaloCostarricense “ Notte di moda, La Dolce Vita”. 2012</li>
-					<li>- Pasarela Emerge Mercedes Benz Fashion Week San Jose 2014 - Pasarela Emerge Mercedes Benz Fashion Week San Jose 2015</li>
+					<li>- <%= polyglot.t('designerItem1a') %></li>
+					<li>- <%= polyglot.t('designerItem1b') %></li>
+					<li>- <%= polyglot.t('designerItem1c') %></li>
 				</ul>
 			</div>
 			<div class="row">	
-				<label>Styling</label>
+				<label><%= polyglot.t('designerItem2') %></label>
 				<br>
 				<ul>
-					<li>- Styling para seminario de fotografía de moda “Desde la toma hasta el producto final” de la Universidad Creativa impartivo por el fotógrafo Mato Farroni.</li>
-					<li>- Asistente de Styling y producción para revista Traffic.</li>
+					<li>- <%= polyglot.t('designerItem2a') %></li>
+					<li>- <%= polyglot.t('designerItem1b') %></li>
 				</ul>
 			</div>
 		</div>
