--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1367,14 +1367,13 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
 }
 .designerText label {
     margin-left: 15px;
-    border-bottom: 1px solid white;
     font-family: bodoniCondensedRegular_font;
     font-size: x-large;
 }
 .designerText ul {
     font-family: bodoniRegular_font;   
     list-style-type: none;
-    font-size: smaller;
+    font-size: large;
     margin-top: 5px;
 }
 
