Commit #14 Locales and Images Test 2

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -173,7 +173,7 @@ body {
 }
 .bodyCollection{
     background-image: url('../img/coleccion.png');
-    background-size: 100% 100%;
+    /*background-size: 100% 100%;*/
 }
 .bodyContact{
     background-image: url('../img/aboutBack.png');
