Commit#15 Collection ImagesTest 3

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -172,7 +172,7 @@ body {
     background-image: url('../img/pri.png');
 }
 .bodyCollection{
-    background-image: url('../img/coleccion.png');
+    background-image: url('../img/coleccion2.png');
     /*background-size: 100% 100%;*/
 }
 .bodyContact{
