--- a/app/scripts/templates/collections.html
+++ b/app/scripts/templates/collections.html
@@ -1,27 +1,38 @@
-<div class="upperLogo">
-  <img src="assets/img/title_logo.png">
-  <h1> S I Q U E I R O S </h1>
-</div>
-<div class="upperTitle">
-  <h2>Colecciones</h2>
+<div class="aboutLogo">
+  <a href="#home"><img src="assets/img/home_logo.png"></a>
+  <a href="#home"><h1> S I Q U E I R O S </h1></a>
   <img src="assets/img/title_line.png">
-  <h1>2015</h1>
+  
 </div>
-<div id="collectionsContainer" class="container">
-  <div class="row center">
-    <div class="col-lg-5 collection1">
-      <p>Párrafo de la colección X</p>
-    </div>
-    <div class="col-lg-7 collection2">
-      <p>Párrafo de la colección X</p>
+<div class="collectionsText">
+  <div class="row">
+    <div class="col-lg-8">
+      <h1><%= polyglot.t('collectionsTitle') %></h1>
+      <br>
+      <div class="row">
+        <div class="col-lg-5">
+          <img src="assets/img/col1a.jpg">
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/img/insulationlogo.png">
+          <br>
+          <p>La colección se encuentra inspirada en el trabajo
+            del artista Michael Kukla. Su obra se resalta por el
+            uso de espacios negativos, limpieza orgánica y utiliza
+            como elemento esencial el hexágono. Observa la
+            degradación de los objetos a causa del agua y el
+            aire. La colección acoge la limpieza y la nitidez del
+            artista con líneas simples jugando con estructura y
+            fluidez. Además todas las prendas son tratadas con
+            químicos naturales que las hacen hidrofóbicas .
+            Esto repele el agua evitando manchas, derrames y
+            manteniendo la prenda limpia por más tiempo.</p>
+            <br>
+            <button class="btn btn-success" id="insulation"><%= polyglot.t('buttonMore') %></button>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="row center">
-    <div class="col-lg-7 collection3">
-      <p>Párrafo de la colección X</p>
-    </div>
-    <div class="col-lg-5 collection4">
-      <p>Párrafo de la colección X</p>
-    </div>
-  </div>
+<br>
 </div><!-- container -->
+<br>
