Commit #18 Shop and Stylism

--- a/app/scripts/templates/insulation.html
+++ b/app/scripts/templates/insulation.html
@@ -30,6 +30,10 @@
         <img src="assets/img/col3b.jpg"  class="col3a">
         <img src="assets/img/col2b.jpg"  class="col2a">
         <br>
+        <img src="assets/img/col4b.jpg" class="col4a">
+        <img src="assets/img/col5b.jpg"  class="col5a">
+        <img src="assets/img/col6b.jpg"  class="col6a">
+        <br>
       </div>
     </div>
   </div>
