--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -168,8 +168,33 @@ body {
     margin: auto;
     bottom: 0px;
 }
+
+#shopDiv{
+    position: relative;
+    width: 80%;
+    height: 80%;
+    margin: auto;
+    text-align: center;
+}
+#shopDiv h1{
+  color: white;
+  font-family: vevey_font;
+}
+
+#shopDiv h2{
+    width: 80%;
+    font-size: xx-large;
+    position: fixed;
+    bottom: 0px;
+    margin: auto;
+    color: white;
+    font-family: vevey_font;
+}
 .bodyHome {
     background-image: url('../img/home.png');
+}
+.bodyShop {
+    background-image: url('../img/homeBack.png');
 }
 .bodyCollection{
     background-image: url('../img/coleccion2.png');
@@ -1436,6 +1461,7 @@ box-shadow:         0px 0px 30px 0px rgba(232, 0, 0, 0.67);
 }
 .imagePreview img{
     width: 30%;
+    margin-top: 2px;
 }
 
 #contactContainer a{
