--- a/app/scripts/templates/collections.html
+++ b/app/scripts/templates/collections.html
@@ -7,7 +7,7 @@
 <div class="collectionsText">
   <div class="row">
     <div class="col-lg-8">
-      <h1><%= polyglot.t('collectionsTitle') %></h1>
+      <h1><%= polyglot.t('menuCollection') %></h1>
       <br>
       <div class="row">
         <div class="col-lg-5">
