--- a/app/scripts/templates/contact.html
+++ b/app/scripts/templates/contact.html
@@ -7,9 +7,7 @@
 		<h2><%= polyglot.t('contactSubtitle') %></h2>
 		<div class="col-lg-6">
 			<br>
-			<span class="icon icon-phone"></span><a> +506 8888-8888 </a><br/>
-			<span class="icon icon-mobile"></span><a> +506 8328 0431 </a><br/>
-			<span class="icon icon-envelop"></span> <a href="#"> es.siqueiros@gmail.com</a> <br/>
+			<span class="icon icon-envelop"></span> <a href="#"> info@siqueiros.co</a> <br/>
 			<span class="icon icon-facebook"></span> <a href="#"> Siqueiros</a> <br/>
 		</div>
 		<div class="col-lg-6">
