--- a/app/scripts/templates/insulation.html
+++ b/app/scripts/templates/insulation.html
@@ -34,6 +34,18 @@
         <img src="assets/img/col5b.jpg"  class="col5a">
         <img src="assets/img/col6b.jpg"  class="col6a">
         <br>
+        <img src="assets/img/col7b.jpg" class="col7a">
+        <img src="assets/img/col8b.jpg"  class="col8a">
+        <img src="assets/img/col9b.jpg"  class="col9a">
+        <br>
+        <img src="assets/img/col10b.jpg" class="col10a">
+        <img src="assets/img/col11b.jpg"  class="col11a">
+        <img src="assets/img/col12b.jpg"  class="col12a">
+        <br>
+        <img src="assets/img/col13b.jpg" class="col13a">
+        <img src="assets/img/col14b.jpg"  class="col14a">
+        <img src="assets/img/col15b.jpg"  class="col15a">
+        <br>
       </div>
     </div>
   </div>
