--- a/app/scripts/templates/video.html
+++ b/app/scripts/templates/video.html
@@ -1,9 +1,41 @@
 <div id="langDiv">
 	<div class="row">
-		<video controls class="siqVideo">
-		  <source src="assets/videos/INSULATION.mp4" type="video/mp4">
-		  Your browser does not support HTML5 video.
-		</video>
+		<div id="player"></div>
+
+    <script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '390',
+          width: '640',
+          videoId: 'wEigOKOe6hQ',
+	      playerVars: { 'autoplay': 1, 'controls': 1,'autohide':1,'frameBorder':'0' },
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+      function onPlayerStateChange(event) {
+        if(event.data === 0){
+        	$(".skipButton").click();
+          }
+      }
+    </script>
 		<br>
 		<label class="skipButton">SKIP</label>
 	</div>
